--- a/linear_Regression.ipynb
+++ b/linear_Regression.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "# Optional Lab: Model Representation\n",
     "\n",
-    <figure>
-    <img src="imgs/lineraregression.png" style="width:600px;height:200px;">
-</figure>
+
+"<figure>\n",
+   
+    " <img src="imgs/lineraregression.png"   style=\"width:600px;height:200px;\">\n",
+    "</figure>"
 
    ]
   },
